commit de prueba

--- a/frontend/header4.html
+++ b/frontend/header4.html
@@ -13,8 +13,8 @@
     </header>
     <nav class="nav_bar"> 
         <div class="c1">
-            <h5>Inicio</h5>
-            <h5>Historia</h5>
+            <img src="" alt=""><a href="">Incio</a>
+            <img src="" alt=""><a href="">Historia</a>
         </div>
 
         <div class="c1"> 
