agregue footer en el index.html

--- a/front_index/index.html
+++ b/front_index/index.html
@@ -69,9 +69,23 @@
             </div>
         </main>
 
-    <footer>
+        
+        <!-- ¡¡¡Copiar este footer!!! -->
+        <footer class="footer_container">
+            <div class="text_footer">
+                <p>EPET N° 3</p>
+                <p>General Pico-La Pampa</p>
+                <p>Copyright 2024</p>
+            </div>
+    
+            <div class="links_footer"> 
+             <a href=https://www.facebook.com/p/EPET-N%C2%BA3-General-Pico-100067066779103/?_rdr target="_blank"><img src="img/icon_facebook.png" alt="logo_facebook" class="a_icon"></a>
+             <a href="https://www.instagram.com/epet3lapampa/" target="_blank"><img src="img/icon_instagram.png" alt="icono instagram" class="a_icon"></a>
+            </div>    
+        </footer>
 
-    </footer>
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
