--- a/front_index/index.html
+++ b/front_index/index.html
@@ -8,11 +8,55 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="nav_container">
 
-        </nav>
-    </header>
+
+<!-- ¡¡¡Copiar este menu!!! -->
+    <header class="header">
+        <nav class="nav_container"> 
+            <div class="iconos_menu_container"> 
+                <img src="icons/menu-hamburguesa.png" class="menu_icon" id="abrir" alt="" class="menu-icon">
+                <img src="icons/cerrar.png" alt="" class="menu-cerrar-icon" id="cerrar">
+            </div>
+            <div class="menu-container" id="menu-container">
+                        <div class="menu-item-container" id="menu-item-container">
+                            
+                            <div class="c1">
+                                <a href="front_index/index.html" class="menu-item"><img src="icons/home.png" alt="" class="icons"><span>Inicio</span></a>
+                            </div>
+
+                            <div class="c1">    
+                                <a href="" class="menu-item"><img src="icons/colegio.png" alt="" class="icons"> <span>Historia</span></a>
+                            </div>
+
+                            <div class="c1"> 
+                                <a href="estudiante.html" class="menu-item"><img src="icons/gorro-de-graduacion.png" alt="" class="icons"> <span>Estudiante/tutor</span></a>
+                            </div>
+
+                            <div class="c1">    
+                                <a href="ayuda.html" class="menu-item"><img src="icons/ayuda.png" alt="" class="icons"> <span>Ayuda</span></a>
+                            </div>
+
+                            <div class="c1">
+                                <a href="noticias.html" class="menu-item"><img src="icons/mundo.png" alt="" class="icons"> <span>Noticias</span></a>
+                            </div>
+
+                            <div class="c1">
+                                <a href="gestiondocente.html" class="menu-item"><img src="icons/usuario.png" alt="" class="icons"> <span>Gestión Docente</span></a>
+                            </div>
+
+                            <div class="c1">
+                                <a href="planificaciones.html" class="menu-item"><img src="icons/libro.png" alt="" class="icons"> <span>Planificaciones</span></a>
+                            </div>
+
+                            <div class="c1">
+                                <a href="estructuracurricular.html" class="menu-item"><img src="icons/curricular.png" alt="" class="icons"> <span>Estructura Curricular</span></a>
+                            </div>
+                    </div>
+            </div>
+    </nav>
+</header>
+<!-- ----------------------------- -->
+
         <main>
             <div class="container_introduccion">
                 <img src="img/img_introduccion.png" alt="imagen escuela" class="img_introduccion">
